--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,7 +1,9 @@
 body {
     color: rgb(65, 75, 86);
     font-family: Tahoma;
-    margin:0
+    margin:0;
+    background-color: rgb(25,35,71);
+
 }
 div {
       min-height:100vh:
@@ -13,15 +15,15 @@ h1,h2 {
 }
 h1 {
     font-size:4em;
-}
-img {
-  display: flex;
-  padding: 20px;
-  margin:0 auto;
-  border-radius:130px;
-  border: 10;
-}
+  }
 
+gif {
+  background-color:rgb(25, 35, 71);
+  display: flex;
+  margin:0 auto;
+  border: 0;
+
+}
 p {
     width: 40%;
     margin:10vh 10vw;
