--- a/css/Aboutstyles.css
+++ b/css/Aboutstyles.css
@@ -16,7 +16,7 @@ p {
 
 .parallax {
   height: 100%;
-  background-color: grey;
+  background-color: white;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -29,6 +29,11 @@ p {
   padding: 150px;
   width: 100%;
   font-size: 2em;
+  background-color: lightpink;
+}
+
+.headtext {
+  background-color: lightpink;
 }
 
 #changetheworld {
@@ -42,4 +47,25 @@ p {
 #plantworld {
 border: 2px solid white;
 border-radius: 360px;
+}
+
+.parallax {
+  /* The image used */
+  background-image: url("https://media.giphy.com/media/l1KVcrdl7rJpFnY2s/giphy.gif");
+
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home {
+  background-color: white;
+border: none;
+color: lightpink;
+border-radius: 15px;
 }
