--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -15,13 +15,33 @@ h1 {
     font-size:4em;
   }
 
+gif {
+  background-color:rgb(25, 35, 71);
+  display: flex;
+  margin:0 auto;
+  border: 0;
+
 }
 p {
     width: 40%;
+    margin:10vh 10vw;
     font-size:2em;
 }
 
-h5 {
-    width:40%
-    font-size:5em
+a{
+    color: rgb(0,0,0)
+}
+
+ol {
+    list-style;none;
+    padding: 0;
+}
+
+a:hover {
+    color:green;
+}
+
+li{
+    font-size:1.2em;
+    transition:30.0 ease;
 }
